Update project details and images in projects.json; refactor logo and header components for improved structure

--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "useTabs": false,
   "svelteSortOrder": "options-scripts-markup-styles",
   "svelteStrictMode": true,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "bracketSameLine": true
 }
